# sharpemu-android

./: .gitmodules  ANDROID_EMULATION_PLAN.md  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fex_bridge.cpp  sharpemu_memory.cpp  sharpemu_memory.h  sharpemu_syscall_handler.cpp  sharpemu_syscall_handler.h
app/src/main/java/com/sharpemu/android/: MainActivity.kt  SharpEmuApp.kt
app/src/main/java/com/sharpemu/android/data/model/: GameEntry.kt
app/src/main/java/com/sharpemu/android/data/repository/: GameRepository.kt
app/src/main/java/com/sharpemu/android/emulation/: EmulatorService.kt  FexEmulator.kt
app/src/main/java/com/sharpemu/android/ui/components/: GameCard.kt  LaunchBar.kt
app/src/main/java/com/sharpemu/android/ui/screens/: SharpEmuApp.kt  SharpEmuViewModel.kt
app/src/main/java/com/sharpemu/android/ui/screens/settings/: SettingsScreen.kt
app/src/main/java/com/sharpemu/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
desktop/: .editorconfig  nuget.config
desktop/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
desktop/src/SharpEmu.Libs/Agc/: AgcExports.cs
desktop/src/SharpEmu.Libs/Kernel/: KernelPthreadState.cs
fex-emu/FEXCore/Source/Utils/: AllocatorHooks.cpp
fex-emu/unittests/ASM/X87/: LoadAtBoundary.asm
